Updated all tests to use only Java 8 features