@@ -9,7 +9,10 @@ import org.junit.jupiter.params.provider.ArgumentsProvider;
 import org.junit.jupiter.params.provider.ArgumentsSource;
 
 import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.Arrays;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.function.Predicate;
 import java.util.stream.Stream;
@@ -23,7 +26,7 @@ class LanguageTest extends TestBase {
 
         @Override
         public Stream<? extends Arguments> provideArguments(ExtensionContext extensionContext) {
-            Predicate<Language> notInvalid = Predicate.not(Language._INVALID_::equals);
+            Predicate<Language> notInvalid = language -> !Language._INVALID_.equals(language);
             return Stream.of(Language.values())
                     .filter(notInvalid)
                     .map(Arguments::of);
@@ -58,13 +61,15 @@ class LanguageTest extends TestBase {
         @Override
         public Stream<? extends Arguments> provideArguments(ExtensionContext extensionContext) {
             return Stream.of(
-                    Arguments.of("requirements.txt", List.of()),
-                    Arguments.of("__init__.py", List.of(Language.PYTHON)),
-                    Arguments.of("Main.java", List.of(Language.JAVA)),
-                    Arguments.of("example.h", List.of(
-                            Language.C,
-                            Language.CPP,
-                            Language.OBJECTIVE_C
+                    Arguments.of("requirements.txt", Collections.emptyList()),
+                    Arguments.of("__init__.py", Collections.singletonList(Language.PYTHON)),
+                    Arguments.of("Main.java", Collections.singletonList(Language.JAVA)),
+                    Arguments.of("example.h", Collections.unmodifiableList(
+                            Arrays.asList(
+                                    Language.C,
+                                    Language.CPP,
+                                    Language.OBJECTIVE_C
+                            )
                     ))
             );
         }
@@ -73,7 +78,7 @@ class LanguageTest extends TestBase {
     @ParameterizedTest(name = "[{index}] {0}")
     @ArgumentsSource(AssociatedWithProvider.class)
     void testAssociatedWith(String name, List<Language> expected) {
-        Path path = Path.of(tmp.toString(), name);
+        Path path = Paths.get(tmp.toString(), name);
         Collection<Language> actual = Language.associatedWith(path);
         Assertions.assertNotNull(actual);
         Assertions.assertEquals(expected.size(), actual.size());
